# Optima

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
drm/eax/: eax.def  eax_stub.c
drm/orbit_r2/source/src/: api.rs
drm/signing/: optima-signing.cer  optima-signing.crt  optima-signing.key
drm/uplay_r1/: framework.h  uplay_data.cpp
src/: auth.rs  browser_login.rs  config.rs  demux.rs  install.rs  launch.rs  main.rs  proto.rs  webauth_capture.rs
