[package]
name = "optima-cli"
version = "0.1.0"
edition = "2021"
description = "Optima — an ownership-backed Ubisoft Connect client (auth / library / install / launch), maxima-cli style"

[[bin]]
name = "optima-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "time", "fs"] }
prost = "0.13"
bytes = "1"
futures = "0.3"
flate2 = "1"
zstd = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = "0.22"
toml = "0.8"
dirs = "5"
rpassword = "7"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
open = "5"
rcgen = { version = "0.13", default-features = false, features = ["ring"] }

[build-dependencies]
prost-build = "0.13"
